--- a/src/styles/ui/index.scss
+++ b/src/styles/ui/index.scss
@@ -1,3 +1,3 @@
-@import './button';
-@import './field';
-@import './logo';
+@use './button' as button;
+@use './field' as field;
+@use './logo' as logo;
