--- a/src/styles/features/_serviceProblem.scss
+++ b/src/styles/features/_serviceProblem.scss
@@ -1,9 +1,9 @@
 @use "../cofigs/vars" as v;
 
 .service-problem {
-  position: relative;
-  width: 100%;
-  height: 100vh;
+  // position: relative;
+  // width: 100%;
+  // height: 100vh;
 
   .s-section__content {
     display: grid;
@@ -17,13 +17,13 @@
     display: flex;
     flex-direction: column;
     gap: v.$spacing-lg;
-    max-height: 60vh;
 
     @include v.desktop {
       display: grid;
       grid-template-columns: 1fr auto 1fr;
       gap: v.$spacing-xl;
       align-items: stretch;
+      max-height: 60vh;
     }
   }
 
@@ -207,12 +207,13 @@
     overflow: auto;
     position: relative;
     order: 3;
-    height: 100%;
-    min-height: 40vh;
+    min-height: 20vh;
     flex: 1;
 
     @include v.desktop {
       order: 3;
+      height: 100%;
+      min-height: 40vh;
     }
   }
 
