--- a/src/styles/sections/_common.scss
+++ b/src/styles/sections/_common.scss
@@ -150,6 +150,10 @@
     max-width: 1040px;
     margin: 0 auto;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: v.$spacing-xl;
 
   }
 
